zadded some file

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 <body class="poppins-font">
     <header>
-        <nav class="nav-bar">
+        <nav class="nav-bar flex">
             <div class="nav-left">Influencer products</div>
             <div class="menu-container">
-                <ul class="menu">
+                <ul class="menu flex">
                     <li><a href="">Home</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">Sign Up</a></li>
