nav section done

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 </ul>
             </div>
         </nav>
+        <section class="banner-container">
+            <div></div>
+        </section>
+        
     </header>
 
 </body>
