--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
                 </ul>
             </div>
         </nav>
-        <section class="banner-container">
-            <div></div>
+        <section class="banner-container flex">
+            <div class="banner-details">
+                <h1>Start your Journey as 
+                Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button class="btn">Preebook Now <i class="fa-solid fa-right-to-bracket"></i></button>
+            </div>
+            <div class="banner-photo">
+                <img src="images/main-camera.png" alt="">
+            </div>
         </section>
         
     </header>
